--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+$primary:rgba(12, 206, 255, 0.452);
+
 @mixin central () {
     display: flex;
     justify-content: center;
@@ -19,7 +21,7 @@ body {
 #main-container {
     width: 39rem;
     height: 39rem;
-    border: 1px solid rgba(12, 206, 255, 0.452);
+    border: 1px solid $primary;
     @include central();
     border-radius: 50%;
 }
